# SDL_gfx_SDL2

./: CMakeLists.txt  SDL_gfx.pc.in  SDL_rotozoom.c
